Refactor SEO elements and improve site structure for SkStudentPath

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags - Hyperlocal Kanpur SEO -->
-    <title>Student Prep Hub Kanpur | #1 Platform for Coaching, PG, Hostels, Libraries & Tiffin Services in Kanpur</title>
-    <meta name="title" content="Student Prep Hub Kanpur | #1 Platform for Coaching, PG, Hostels, Libraries & Tiffin Services in Kanpur" />
-    <meta name="description" content="Kanpur's most trusted platform for students. Find & book verified coaching centers, PG accommodations, hostels, tiffin services, and libraries near IIT Kanpur, CSJM University, HBTU. List your services & reach 2000+ students. 100% verified listings." />
-    <meta name="keywords" content="coaching centers Kanpur, PG in Kanpur, hostels near IIT Kanpur, student accommodation Kanpur, tiffin services Kanpur, libraries Kanpur, PG near CSJM University, coaching Kidwai Nagar, PG Kakadeo, hostels Kalyanpur, student housing Govind Nagar, list PG Kanpur, register coaching center Kanpur, best coaching Kanpur, affordable PG Kanpur, boys hostel Kanpur, girls hostel Kanpur, mess services Kanpur, study cafe Kanpur, Kanpur student services, Uttar Pradesh coaching, UP student platform" />
-    <meta name="author" content="Student Prep Hub" />
+    <title>SkStudentPath Kanpur | #1 Platform for Coaching, PG, Hostels, Libraries & Tiffin in Kanpur, UP</title>
+    <meta name="title" content="SkStudentPath Kanpur | Best Coaching Centers, PG, Hostels, Libraries & Tiffin Services in Kanpur" />
+    <meta name="description" content="SkStudentPath - Kanpur's #1 student services platform. Find verified coaching centers in Kidwai Nagar, PG in Kakadeo, hostels near IIT Kanpur & CSJM University, tiffin services in Govind Nagar, libraries in Civil Lines. List your services FREE & reach 5000+ students daily. 100% verified listings in Kanpur, Uttar Pradesh." />
+    <meta name="keywords" content="SkStudentPath, skstudentpath kanpur, coaching centers Kanpur, best coaching Kidwai Nagar, coaching center Civil Lines Kanpur, JEE coaching Kanpur, NEET coaching Kanpur, UPSC coaching Kanpur, PG in Kanpur, PG near IIT Kanpur, PG Kakadeo Kanpur, PG Kalyanpur, boys PG Kanpur, girls PG Kanpur, hostels near IIT Kanpur, hostels CSJM University, hostels HBTU Kanpur, hostel Govind Nagar, student accommodation Kanpur, tiffin services Kanpur, tiffin Kidwai Nagar, mess services Kanpur, home food delivery Kanpur, libraries Kanpur, study library Civil Lines, 24 hour library Kanpur, study cafe Kanpur, list PG Kanpur, register coaching center Kanpur, affordable PG Kanpur, boys hostel Kanpur, girls hostel Kanpur, Kanpur student services, Uttar Pradesh student platform, student services UP, Kanpur Nagar student hub, paying guest Kanpur, room rent Kanpur students, student housing Swaroop Nagar, accommodation Harsh Nagar Kanpur, pg near GSVM Medical College, student flat Kanpur" />
+    <meta name="author" content="SkStudentPath" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <meta name="language" content="English" />
     <meta name="revisit-after" content="1 days" />
@@ -26,21 +26,23 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://skstudentpath.com/" />
-    <meta property="og:title" content="Student Prep Hub Kanpur | Best Coaching, PG, Hostels & Student Services" />
-    <meta property="og:description" content="Kanpur's #1 student services platform. Find verified coaching centers, PG, hostels, libraries & tiffin services. List your services or discover the best facilities near IIT Kanpur, CSJM, HBTU." />
+    <meta property="og:title" content="SkStudentPath Kanpur | Best Coaching, PG, Hostels & Student Services in Kanpur, UP" />
+    <meta property="og:description" content="Kanpur's #1 student services platform. Find verified coaching centers in Kidwai Nagar, PG in Kakadeo, hostels near IIT Kanpur, libraries in Civil Lines. List your services FREE!" />
     <meta property="og:image" content="https://skstudentpath.com/og-image-kanpur.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Student Prep Hub - Kanpur's Premier Student Services Platform" />
-    <meta property="og:site_name" content="Student Prep Hub Kanpur" />
+    <meta property="og:image:alt" content="SkStudentPath - Kanpur's #1 Student Services Platform for Coaching, PG, Hostels" />
+    <meta property="og:site_name" content="SkStudentPath Kanpur" />
     <meta property="og:locale" content="en_IN" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://skstudentpath.com/" />
-    <meta name="twitter:title" content="Student Prep Hub Kanpur | Best Coaching, PG, Hostels & Student Services" />
-    <meta name="twitter:description" content="Kanpur's #1 student services platform. Find verified coaching, PG, hostels, libraries & tiffin services near IIT Kanpur, CSJM University." />
+    <meta name="twitter:title" content="SkStudentPath | Coaching, PG, Hostels & Tiffin Services in Kanpur, UP" />
+    <meta name="twitter:description" content="Kanpur's #1 student platform. Find coaching in Kidwai Nagar, PG in Kakadeo, hostels near IIT Kanpur & CSJM. List your services FREE!" />
     <meta name="twitter:image" content="https://skstudentpath.com/og-image-kanpur.jpg" />
+    <meta name="twitter:site" content="@skstudentpath" />
+    <meta name="twitter:creator" content="@skstudentpath" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://skstudentpath.com/" />
@@ -105,8 +107,8 @@
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Student Prep Hub Kanpur",
-        "alternateName": ["SkStudentPath", "Student Prep Hub", "SK Student Path Kanpur"],
+        "name": "SkStudentPath Kanpur",
+        "alternateName": ["SkStudentPath", "SK Student Path", "Student Path Kanpur", "Kanpur Student Services"],
         "url": "https://skstudentpath.com",
         "description": "Kanpur's #1 platform for student services - find and book coaching centers, PG accommodations, hostels, tiffin services, and libraries. List your services and reach thousands of students.",
         "inLanguage": "en-IN",
@@ -134,7 +136,7 @@
       {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
-        "name": "Student Prep Hub Kanpur",
+        "name": "SkStudentPath Kanpur",
         "alternateName": "SkStudentPath",
         "url": "https://skstudentpath.com",
         "logo": "https://skstudentpath.com/logo.png",
